Color scheme makeover

--- a/html/templates/class.html
+++ b/html/templates/class.html
@@ -7,9 +7,9 @@
 
 <p><b><u>Description</u></b></p>
 
-<i>&nbsp&nbsp&nbsp&nbsp{flavor_text}</i><br>
+<p><i>&nbsp&nbsp&nbsp&nbsp{flavor_text}</i></p>
 
-&nbsp&nbsp&nbsp&nbsp{description}<br><br>
+<p>&nbsp&nbsp&nbsp&nbsp{description}</p><br>
 
 <ul>
 {branch_descriptions}
