--- a/html/templates/rulebook.html
+++ b/html/templates/rulebook.html
@@ -12,8 +12,8 @@
 <body>
 
 <div class="img-container-l1">
-	<div class="img-container-l2">
-		<img src="https://i.imgur.com/9u8XLg7.png" alt="logo">
+	<div class="img-container-l2 blended">
+		<img src="https://i.imgur.com/gpBumlT.png" alt="logo">
 	</div>
 </div>
 
@@ -116,7 +116,7 @@
 			<a id="Gods"><h3>Gods</h3></a>
 			<br>
 
-			<b>Nox</b>
+			<p><b>Nox</b></p>
 			<ul>
 				<li>Alignment - LG</li>
 				<li>Domain - Battle, Heroism, Loyalty, Honor, Freedom, Chivalry, War</li>
@@ -124,7 +124,7 @@
 				<li>Ascended from Noxycs</li>
 			</ul><br>
 
-			<b>Aloys</b>
+			<p><b>Aloys</b></p>
 			<ul>
 				<li>Alignment - CG</li>
 				<li>Domain - Charity, Time, Travel, Nature</li>
@@ -132,7 +132,7 @@
 				<li>Ascended from Aloysius Knight</li>
 			</ul><br>
 
-			<b>Kefanas</b>
+			<p><b>Kefanas</b></p>
 			<ul>
 				<li>Alignment - LN</li>
 				<li>Domain - Trade, Assassins, Politics, Family, the Common Man</li>
@@ -140,7 +140,7 @@
 				<li>Ascended from Porkwaffles and Sylvanas</li>
 			</ul><br>
 
-			<b>Davas</b>
+			<p><b>Davas</b></p>
 			<ul>
 				<li>Alignment - TN</li>
 				<li>Domain - Magic, Technology, Education, Genesis</li>
@@ -148,7 +148,7 @@
 				<li>Ascended from Dakvas</li>
 			</ul><br>
 
-			<b>Phaxet</b>
+			<p><b>Phaxet</b></p>
 			<ul>
 				<li>Alignment - CN</li>
 				<li>Domain - Love, Sex, Motherhood, Music, Entertainment, Art</li>
@@ -156,7 +156,7 @@
 				<li>Ascended from Phaxnsette Dek</li>
 			</ul><br>
 
-			<b>Adol</b>
+			<p><b>Adol</b></p>
 			<ul>
 				<li>Alignment - LE</li>
 				<li>Domain - Death, Darkness, Decay, Age, Wealth, the Afterlife</li>
@@ -164,7 +164,7 @@
 				<li>Ascended from Adolamin Warg</li>
 			</ul><br>
 
-			<b>Dren</b>
+			<p><b>Dren</b></p>
 			<ul>
 				<li>Alignment - CE</li>
 				<li>Domain - Murder, Evil, Blood, Ritualism, War, Chaos</li>
