--- a/html/templates/calendar_month.html
+++ b/html/templates/calendar_month.html
@@ -12,8 +12,8 @@
 <body>
 
 <div class="img-container-l1">
-    <div class="img-container-l2">
-        <img src="https://i.imgur.com/9u8XLg7.png" alt="logo">
+    <div class="img-container-l2 blended">
+        <img src="https://i.imgur.com/gpBumlT.png" alt="logo">
     </div>
 </div>
 
