--- a/html/templates/class_hint.html
+++ b/html/templates/class_hint.html
@@ -1,1 +1,1 @@
-<p style="background-color: {color}">&nbsp;&nbsp;&nbsp;&nbsp;<b>{name}</b> – {preview} <i>[{requirements}]</i></p>
+<p style="background-color: {color};">&nbsp;&nbsp;&nbsp;&nbsp;<b>{name}</b> – {preview} <i>[{requirements}]</i></p>
