Item constructing improvements
* Preserve capitalization in constructed item effect affixes
* Allow type of item to be specified, default to UNKNOWN if none is provided
* More consistent error messages and include item name in errors
* Null checks

--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -374,7 +374,7 @@
                     <br>
                     <ul>
                         <li>Accuracy - <span class="monospace">accuracy: &lt;percentage&gt; &lt;applicable roll type&gt;</span></li>
-                        <li>Buff strip - <span class="monospace">ac pen: &lt;number of buffs stripped&gt; &lt;applicable roll type&gt;</span></li>
+                        <li>Buff strip - <span class="monospace">buff strip: &lt;number of buffs stripped&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Forced movement - <span class="monospace">forced movement: &lt;number of ft of movement&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Lethality - <span class="monospace">lethality: &lt;percentage&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Lifesteal - <span class="monospace">lifesteal: &lt;percentage&gt; &lt;applicable roll type&gt;</span></li>
