Update stats and skills based on constructed items
Since we are defining items and their affixes on the character sheet now, we
can actually also update stats and skills automatically as items change. Item
affixes that boost stats are now reflected in the character sheet stats
section. Item affixes that boost skills are not reflected in the character
sheet skills section. Fortunately, we never poll the stat value or skill
rank/bonus directly in the API (we instead rely on attributes and AP in
skills), so this change should have no impact on how the API works.

--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -329,10 +329,10 @@
                         <li><span class="monospace">melee damage: &lt;bonus&gt; all</span></li>
                         <li><span class="monospace">ranged fine damage: &lt;bonus&gt; all</span></li>
                         <li><span class="monospace">magic damage: &lt;bonus&gt; all</span></li>
-                        <li><span class="monospace">critical hit chance: &lt;bonus&gt;  &lt;applicable roll type&gt;</span> - Unlike all other stats, applicable roll type is <i>very rarely</i> "all" here. It is normally "physical" or "magic".</li>
+                        <li><span class="monospace">critical hit chance: &lt;bonus&gt;  &lt;applicable roll type&gt;</span> - Unlike all other stats, applicable roll type is <i>very rarely</i> "all" here. It is normally "physical", "magic", or "psychic".</li>
                         <li><span class="monospace">commands: &lt;bonus&gt; all</span></li>
                         <li><span class="monospace">languages: &lt;bonus&gt; all</span></li>
-                        <li><span class="monospace">item efficient: &lt;bonus&gt; all</span></li>
+                        <li><span class="monospace">item efficiency: &lt;bonus&gt; all</span></li>
                         <li><span class="monospace">buff limit: &lt;bonus&gt; all</span></li>
                         <li><span class="monospace">concentration limit: &lt;bonus&gt; all</span></li>
                     </ul>
